# traffic-simulation-coursework-2025

./: .gitignore  CMakeLists.txt  INTERFACES.md  LICENSE  README.md  api.md  game_data.db
docs/: DETAIL_REFERENCE.md  INTERFACES.md  PROJECT_OVERVIEW.md  USER_TWEAKS.md
includes/: DatabaseCallbacks.hpp  DatabaseInitializer.hpp  HTNPlanner.hpp  HTN_old.cpp  HTN_old.hpp  Scheduler.hpp  Simulator.hpp  TaskGraph.hpp  TaskManager.hpp  TaskNode.hpp  TaskTree.hpp  WorkerInit.hpp  WorldState.hpp  objects.hpp
old/: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake  history_202512060728.md  simulation.txt  simulation_new.txt
old/includes/: DatabaseCallbacks.hpp  DatabaseInitializer.hpp  HTNPlanner.hpp  TaskManager.hpp  TaskTree.hpp  WorldState.hpp
old/newversion/includes/: Scheduler.hpp  TaskBuilder.hpp  TaskGraph.hpp
old/newversion/src/: Scheduler.cpp  TaskBuilder.cpp  TaskGraph.cpp  main_new.cpp
old/resources/: game_data.db
old/src/: AgentImplementation.cpp  DatabaseInitializer.cpp  TaskManagerImplementation.cpp  TaskTreeImplementation.cpp  WorldState.cpp  main.cpp
resources/: game_data.db  game_data.db-shm  sqlmaker.py
src/: DatabaseCallbacks.cpp  DatabaseInitializer.cpp  Scheduler.cpp  Simulator.cpp  TaskGraph.cpp  TaskManagerImplementation.cpp  TaskTree.cpp  TaskTreeImplementation.cpp  WorkerInit.cpp  WorldState.cpp  main.cpp  objects.cpp
visualizer/: boot.py  visualizer.py  visualizer_2k.py  visualizer_2k_tasks.patch  visualizer_FHD.py
